// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionSheet Basic 1`] = `
<div class="n22-example-child n22-example-child-action-sheet">
  <div class="n22-action-sheet">
    <div class="n22-popup with-mask bottom" style="display:none;">
      <div name="n22-mask-fade" class="n22-popup-mask" style="display:none;"></div>
      <div name="n22-slide-up" class="n22-popup-box n22-slide-up" style="display:none;">
        <div class="n22-action-sheet-content">
          <header class="n22-action-sheet-header">操作说明的标题</header>
          <ul class="n22-action-sheet-list">
            <li class="n22-action-sheet-item">
              <div class="n22-action-sheet-item-wrapper">
                <div class="n22-action-sheet-item-section">选项1</div>
              </div>
            </li>
            <li class="n22-action-sheet-item">
              <div class="n22-action-sheet-item-wrapper">
                <div class="n22-action-sheet-item-section">选项2</div>
              </div>
            </li>
            <li class="disabled n22-action-sheet-item">
              <div class="n22-action-sheet-item-wrapper">
                <div class="n22-action-sheet-item-section">选项3</div>
              </div>
            </li>
          </ul>
        </div>
        <div class="n22-action-sheet-content" style="margin-top:2%;">
          <ul>
            <div class="n22-action-sheet-cancel">取消</div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActionSheet Singleton pattern 1`] = `
<div class="n22-action-sheet">
  <div class="n22-popup with-mask bottom" style="">
    <div class="n22-popup-mask" style=""></div>
    <div class="n22-popup-box n22-slide-up" style="">
      <div class="n22-action-sheet-content">
        <header class="n22-action-sheet-header">操作说明的标题</header>
        <ul class="n22-action-sheet-list">
          <li class="n22-action-sheet-item">
            <div class="n22-action-sheet-item-wrapper">
              <div class="n22-action-sheet-item-section">选项1</div>
            </div>
          </li>
          <li class="n22-action-sheet-item">
            <div class="n22-action-sheet-item-wrapper">
              <div class="n22-action-sheet-item-section">选项2</div>
            </div>
          </li>
          <li class="disabled n22-action-sheet-item">
            <div class="n22-action-sheet-item-wrapper">
              <div class="n22-action-sheet-item-section">选项3</div>
            </div>
          </li>
        </ul>
      </div>
      <div class="n22-action-sheet-content" style="margin-top: 2%;">
        <ul>
          <div class="n22-action-sheet-cancel">取消</div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
